--- a/AppWeek10/.gitignore
+++ b/AppWeek10/.gitignore
@@ -1,6 +1,4 @@
-*.iml
-.gradle
-/local.properties# Gradle files
+# Gradle files
 .gradle/
 build/
 
@@ -34,15 +32,3 @@ google-services.json
 
 # Android Profiling
 *.hprof
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
-local.properties
